[FIX] contrast stop scan btn et min height

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -34,6 +34,6 @@ ion-button {
   position: absolute;
   bottom: 100px;
   width: 100vw;
-  height: 50px;
+  min-height: 48dp;
   z-index: 11;
 }
